* Fix punctuation parsing to handle whitespace properly. * TODO: after upgrading to Elm 0.19, use elm/parser for this instead of   regexen.

--- a/text/static/text/css/text.css
+++ b/text/static/text/css/text.css
@@ -58,12 +58,6 @@ span {
     grid-column: 1 / 3;
 }
 
-#startover {
-}
-
-#goback {
-}
-
 #text_score {
     display: grid;
     grid-column: 2;
